Fixed swagger routing and handling
